# mestrado

./: .gitignore  baixar_dados_ibge.py  fmsaude.py  pyproject.toml
dados/: seminario_integrador.qgz
dados/dados_site_originais/: grade_id66.sbn  grade_id66.sbx  grade_id66.shp.xml  grade_id66.shx
dados/dados_site_originais/ASC2007/: BASICO22.xls  DOMICILIO22.xls  Descrição de setores - PI.xls  Documentacao_agregado.doc  PESSOAP4_22.xls  RESPONSAVEL22.xls
dados/dados_site_originais/MAPAS_DE_TERESINA_SHAPEFILE/: BAIRROS_2013.rar  BAIRROS_2013.shp  BAIRROS_2013.shx  NUCLEOS_URBANOS.rar  PRAÇAS DECRETADAS.rar  Perimetro Urbano 2015.rar  Perimetro Urbano 2022 Lei nº3.757 de 03-06-2022.rar  SUBBACIAS.rar  ZONAS_SAAD.rar  ZONA_URBANIZACAO_ESPECIFICA.rar  ZONEAMENTO Lei nº 5.481 de 20_12_2019  ZONEAMENTO-Lei-5.807-2022.rar
dados/temp/: REDE DE SAÚDE DE TERESINA.kmz  bairro_2023_dwg2shp.idx  bairros2013_teresina_v1.geojson  bairros_2013_ok.qmd  bairros_2023.dbf  bairros_2023.idx  bairros_2023.prj  bairros_2023.shp  bairros_2023.shx  teresina_bairroa_2013.fgb  teresina_bairroa_2013.geojson  teresina_dataset08_renda.csv  teresina_dataset09_desenvolvimento_economico.geojson
dados/teste_qgis/: Agregados_preliminares_por_setores_censitarios_PI.csv
dados/teste_qgis/00_originais/: Perimetro_Urbano_2022.kml  Teresina Geo - Equipamentos Municipais.kmz
dados/teste_qgis/01_modificados/: grade_estatistica_id66.qmd  h3_n9.geojson  perimetro_urbano_2022.geojson  saude_fms.fgb  setores_censitaros_teresina_2022.geojson
onibus/: get_itinerario.py  itinerario_zona.csv
(+5 files in other folders)
