[tool.poetry]
name = "mestrado"
version = "0.1.0"
description = ""
authors = ["felipedantas-pi <tecnologo.felipedantas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.2"
pandas = "^2.2.3"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
